Updated index.html with more relevant info

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Kalyan's Personal Site</title>
+  <title>Colten's Personal Site</title>
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
       <td><img src="images/kalyan_datta.png" alt="kalyan's profile pic"></td>
-      <td><h1>Kalyan Datta</h1>
-      <p><em>Muscian & friend of sinners.</em></p>
+      <td><h1>Colten Unger</h1>
+      <p><em>Muscian & Communicator.</em></p>
       <p>I am a student of Intercultural Communication at <strong><a href="https://www.moody.edu/">Moody Bible Institute</a></strong>, Indian Classical Music and Web Development.</p></td>
     </tr>
   </table>
@@ -19,7 +19,7 @@
   <hr>
   <h3><strong>Books and Teaching</strong></h3>
   <ul>
-    <li>Music's Own Theology</li>
+    <li>Theology of Music</li>
     <li>The Voice of Music</li>
   </ul>
   <hr>
@@ -34,7 +34,7 @@
     <tbody>
       <tr>
         <td>2005-2016</td>
-        <td>Web Developer at Apple</td>
+        <td>Web Developer at Unger Builders</td>
       </tr>
       <tr>
         <td>2017-2019</td>
